tests/dataset/tpc-ds/compiler/go/q48.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq482055602725/001/main.go:191:2: syntax error: unexpected name at64 after top level declaration
